<resources>
    <string name="app_name">Multi Tool Application</string>
    <string name="calculator_title">Calculator</string>
    <string name="timer_title">Timer</string>
    <string name="stopwatch_title">Stopwatch</string>
    <string name="calendar_title">Calendar</string>
    <string name="alarm_clock_title">Alarm Clock</string>
    <string name="google_maps_title">Maps</string>
    <string name="notepad_title">Notepad</string>
    <string name="money_converted_title">Money Converter</string>
    <string name="applications_title">Applications</string>
    <string name="description_application">Program of everything you need!</string>
    <string name="others_title">Other</string>
    <string name="information_title">Information</string>
    <string name="about_developer_title">Developer</string>
    <string name="nothing" />
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_page">Main Page</string>
    <string name="zero_default">0</string>
    <string name="clearEverything">C</string>
    <string name="removeCharacter">←</string>
    <string name="percentage_sign">%</string>
    <string name="divide_symbol">÷</string>
    <string name="seven_button">7</string>
    <string name="eight_button">8</string>
    <string name="buttonNine">9</string>
    <string name="multiply_button">×</string>
    <string name="four_button">4</string>
    <string name="button_five">5</string>
    <string name="button_six">6</string>
    <string name="button_minus">-</string>
    <string name="button_one">1</string>
    <string name="button_two">2</string>
    <string name="button_three">3</string>
    <string name="plus_button">+</string>
    <string name="absolute_button">+/-</string>
    <string name="button_zero">0</string>
    <string name="button_comma">,</string>
    <string name="equals_button">=</string>
    <string name="default_result">write equation</string>
    <string name="greet_string">Welcome to Multi Tool Application!</string>
    <string name="greet_description_string">Application that contains everything you need!</string>
    <string name="application_version">Version: 0.0.1</string>
    <string name="default_timer_time">00</string>
    <string name="up_arrow_timer">▲</string>
    <string name="down_arrow_timer">▼</string>
    <string name="weather">Weather</string>
    <string name="city_name">City Name</string>
    <string name="weather_by_name">Weather By Name</string>
    <string name="weather_by_id">Weather by ID</string>
    <string name="get_city_id">Get City ID</string>
    <string name="default_city">City:</string>
    <string name="default_region">Region:</string>
    <string name="default_country">Country:</string>
    <string name="default_timezone">Timezone:</string>
    <string name="default_local_time">Local Time:</string>
    <string name="default_last_updated">Last Updated:</string>
    <string name="default_temperature">Temperature:</string>
    <string name="default_condition">Condition:</string>
    <string name="default_humidity">Humidity:</string>
    <string name="default_cloud">Cloud:</string>
    <string name="default_update">update</string>
</resources>