<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".TimerFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/timer_play_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/black"
            android:src="@drawable/play_arrow_button"
            app:cornerRadius="0sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:tint="@color/white" />

        <ImageButton
            android:id="@+id/timer_pause_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/black"
            android:src="@drawable/pause_button"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:tint="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/timer_play_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <Button
                android:id="@+id/hours_button_down"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/app_name"
                android:text="@string/down_arrow_timer"
                android:textColor="@color/black"
                android:textSize="48sp" />

            <Button
                android:id="@+id/minute_button_down"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/app_name"
                android:text="@string/down_arrow_timer"
                android:textColor="@color/black"
                android:textSize="48sp"
                app:cornerRadius="0sp" />

            <Button
                android:id="@+id/seconds_button_down"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/app_name"
                android:text="@string/down_arrow_timer"
                android:textColor="@color/black"
                android:textSize="48sp"
                app:cornerRadius="0sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="25dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/hours_button_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/app_name"
                android:text="@string/up_arrow_timer"
                android:textColor="@color/black"
                android:textSize="48sp"
                app:cornerRadius="0sp" />

            <Button
                android:id="@+id/minute_button_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/app_name"
                android:text="@string/up_arrow_timer"
                android:textColor="@color/black"
                android:textSize="48sp"
                app:cornerRadius="0sp" />

            <Button
                android:id="@+id/seconds_button_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/app_name"
                android:text="@string/up_arrow_timer"
                android:textColor="@color/black"
                android:textSize="48sp"
                app:cornerRadius="0sp"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="200dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/timer_hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/default_timer_time"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="89sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/timer_minutes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/default_timer_time"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="89sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/timer_seconds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_timer_time"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="89sp"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>